--- a/admin/admin.html
+++ b/admin/admin.html
@@ -412,14 +412,53 @@
 
         // 处理图片上传
         function handleImageUpload(file) {
-            const reader = new FileReader();
-            reader.onload = (e) => {
-                currentImage = e.target.result;
-                imagePreview.src = currentImage;
-                imagePreview.style.display = 'block';
-                uploadToServer(file);
-            };
-            reader.readAsDataURL(file);
+            // 先压缩图片
+            compressImage(file, 800, 0.8).then(compressedFile => {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    currentImage = e.target.result;
+                    imagePreview.src = currentImage;
+                    imagePreview.style.display = 'block';
+                    uploadToServer(compressedFile);
+                };
+                reader.readAsDataURL(compressedFile);
+            });
+        }
+
+        // 压缩图片
+        function compressImage(file, maxWidth, quality) {
+            return new Promise((resolve) => {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const img = new Image();
+                    img.onload = () => {
+                        const canvas = document.createElement('canvas');
+                        let width = img.width;
+                        let height = img.height;
+
+                        // 按比例缩放
+                        if (width > maxWidth) {
+                            height = (height * maxWidth) / width;
+                            width = maxWidth;
+                        }
+
+                        canvas.width = width;
+                        canvas.height = height;
+
+                        const ctx = canvas.getContext('2d');
+                        ctx.drawImage(img, 0, 0, width, height);
+
+                        canvas.toBlob((blob) => {
+                            resolve(new File([blob], file.name, {
+                                type: 'image/jpeg',
+                                lastModified: Date.now()
+                            }));
+                        }, 'image/jpeg', quality);
+                    };
+                    img.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            });
         }
 
         // 上传到服务器
